<resources>
    <string name="app_name">cart</string>
    <string name="recommended_for_you">RECOMMENDED FOR YOU</string>
    <string name="repeat_again">REPEAT AGAIN?</string>
    <string name="coupon_icon">Coupon Icon</string>
    <string name="get_50_off_up_to_140">Get 50% Off up to ₹140</string>
    <string name="use_pvrfood50">Use PVRFOOD50</string>
    <string name="proceed">Proceed</string>
    <string name="_00_00">₹00.00</string>
    <string name="no_items_added">No items added</string>
    <string name="pvr_plaza_new_delhi">PVR Plaza, New Delhi</string>
    <string name="order_snacks">Order Snacks</string>
    <string name="bestsellers">Bestsellers</string>
    <string name="veg">Veg</string>
    <string name="popcorn_large">Popcorn Large</string>
    <string name="_500">₹500</string>
    <string name="customizable">• Customizable</string>
    <string name="add">Add</string>
    <string name="cap">-</string>
    <string name="_1">1</string>
    <string name="addtext">+</string>
    <string name="pair_this_with">PAIR THIS WITH</string>
    <string name="veggie_steamed_momos">Veggie Steamed Momos</string>
</resources>